refactor: 리소스를 읽을 때 Files.readString 사용
바이트 배열을 거쳐 문자열로 변환하던 과정을 없앤다.
Path.of를 사용해 File 경유도 제거한다.